<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/card_view_img"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"/>
        <TextView
            android:id="@+id/card_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/card_view_img"
            android:layout_toRightOf="@id/card_view_img"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/game_title" />

        <TableLayout
            android:id="@+id/card_view_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_button"
            android:layout_below="@+id/card_view_title"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/card_view_img"
            android:layout_toRightOf="@id/card_view_img">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/release_date"
                    style="@style/TextSpec.Value"
                    android:text="@string/release_date_content" />
            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/game_rating" />

                <TextView
                    android:id="@+id/rating_game"
                    style="@style/TextSpec.Value"
                    android:text="@string/game_rating_content" />
            </TableRow>



        </TableLayout>

        <Button
            android:id="@+id/layout_button"
            style="@style/ButtonGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/card_view_img"
            android:layout_toRightOf="@id/card_view_img"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/buttonDetail"
            android:textSize="12sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/share_button"
            style="@style/ButtonGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_toEndOf="@id/layout_button"
            android:layout_toRightOf="@id/layout_button"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/share"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>