<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:layout_marginRight="4dp">
        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="230dp"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars"
            android:layout_marginRight="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingRight="10dp"
                android:layout_toRightOf="@id/card_view_img"
                android:text="Game Title"/>
            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:textSize="18sp"
                tools:text="@string/titleGame"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingRight="10dp"
                android:layout_toRightOf="@id/card_view_img"
                android:text="Release Date"/>
            <TextView
                android:id="@+id/detail_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:textSize="18sp"
                tools:text="@string/releaseDate"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingRight="10dp"
                android:layout_toRightOf="@id/card_view_img"
                android:text="Game Rating"/>
            <TextView
                android:id="@+id/detail_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:textSize="15sp"
                tools:text="@string/gameRating"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:layout_toRightOf="@id/card_view_img"
            android:text="Description"/>
        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:paddingRight="10dp"/>
    </LinearLayout>

</LinearLayout>